--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diversidade Cultural - Campo à Cidade</title>
+    <title>Diversidade Cultural/title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <nav id="navbar">
+    <nav id="aula">
         <ul>
             <li><a href="#inicio">Início</a></li>
             <li><a href="#noticias">Notícias</a></li>
@@ -18,11 +18,10 @@
 
     <header id="inicio">
         <h1>Diversidade Cultural do Campo à Cidade</h1>
-        <p>Celebrando as tradições, histórias e expressões culturais que unem o rural ao urbano.</p>
     </header>
 
     <section id="noticias">
-        <h2>Últimas Notícias</h2>
+        <h2>Notícias Recentes</h2>
 
         <div class="cartas">
 
@@ -55,8 +54,8 @@
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Entre em contato pelo e-mail: <a href="ana@campocidade.com.br">contato@campocidade.com.br</a><br>
-        ou pelo telefone: (41) 98777-4878</p>
+        <p>Entre em contato pelo e-mail: <a href="ana@trigo.com.br">ana@trigo.com.br</a><br>
+        ou pelo telefone: (77) 77777-7777</p>
     </section>
 
 </body>
